# multiple-container-versions-poc

./: Makefile  README.md  docker-compose.yml  ecs-proxies-containers.yml  ecs-proxies-deploy.yml  manifest_template.yml  package-lock.json  package.json  pyproject.toml
azure/: azure-pr-pipeline.yml  azure-release-pipeline.yml  project.yml
docker/my-service/: Dockerfile  pyproject.toml  requirements.txt
docker/my-service/my_service/: main.py
docker/nginx/: nginx.conf
proxies/live/apiproxy/: proxy.xml
proxies/live/apiproxy/policies/: ServiceCallout.CallHealthcheckEndpoint.xml  VerifyAPIKey.xml
proxies/live/apiproxy/proxies/: default.xml
proxies/live/apiproxy/targets/: target.xml
proxies/sandbox/apiproxy/: proxy.xml
sandbox/: app.js  app.spec.js  package-lock.json  package.json
specification/: multiple-container-versions-poc.yaml
tests/: test_endpoints.py
